--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -26,6 +26,8 @@ endmenu
 
 source "drivers/video/backlight/Kconfig"
 
+source "drivers/video/xylon/Kconfig"
+
 config VGASTATE
        tristate
        default n
